Updated to work with newest FCOS

--- a/fedora/Dockerfile
+++ b/fedora/Dockerfile
@@ -65,6 +65,7 @@ ENV DISABLE_VGPU_VERSION_CHECK=$DISABLE_VGPU_VERSION_CHECK
 ENV NVIDIA_VISIBLE_DEVICES=void
 
 # getopt etc.
+RUN dnf upgrade -y
 RUN dnf install -y util-linux 'dnf-command(download)'
 
 ADD install.sh /tmp/
